# template_multi_agent_chatbot

./: .env.example  .gitignore  Procfile  README.md  pyproject.toml
output/: post.md
src/template_multi_agent_chatbot/: main.py
src/template_multi_agent_chatbot/agents/: __init__.py  conversational_agent.py  message_classifier_agent.py
src/template_multi_agent_chatbot/crews/: __init__.py  crewai_docs_crew.py  handle_user_message_crew.py  image_creation_crew.py  internet_search_crew.py
src/template_multi_agent_chatbot/db/: __init__.py  connection.py  message_repository.py
src/template_multi_agent_chatbot/events/: __init__.py  conversational_event_bus.py
src/template_multi_agent_chatbot/events/clients/: dispatcher.py
src/template_multi_agent_chatbot/events/listeners/: __init__.py  conversational_event_listener.py
src/template_multi_agent_chatbot/events/types/: __init__.py  image_generated.py  message_created.py
src/template_multi_agent_chatbot/skills/crewai-docs/: SKILL.md
src/template_multi_agent_chatbot/tools/: __init__.py  nano_banana_image_editing_tool.py  nano_banana_image_generation_tool.py  send_message_to_user_tool.py
src/template_multi_agent_chatbot/types/: __init__.py  classification_result.py  conversational_state.py  message.py
ui_template_multi_agent_chatbot/: app.py
ui_template_multi_agent_chatbot/db/: __init__.py
ui_template_multi_agent_chatbot/static/css/: style.css
ui_template_multi_agent_chatbot/static/js/: app.js
ui_template_multi_agent_chatbot/templates/: index.html
(+6 files in other folders)
