[project]
name = "template_multi_agent_chatbot"
version = "0.1.0"
description = "template_multi_agent_chatbot using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]==1.14.2",
    "requests>=2.32.5",
]

[project.scripts]
kickoff = "template_multi_agent_chatbot.main:kickoff"
run_crew = "template_multi_agent_chatbot.main:kickoff"
plot = "template_multi_agent_chatbot.main:plot"
run_with_trigger = "template_multi_agent_chatbot.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
